--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
 <header>
@@ -14,7 +15,7 @@
             <li> Origin Story </li>
             <li> Fun Facts </li>
             <li> Favorite food </li>
-            <li> favorite teams </li>
+            <li> Favorite Teams </li>
         </ul>
 
     </nav>
